<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/main_container"
        >
        
        <!--QUESTION 1-->
        <LinearLayout
            style="@style/q_container"
            >
            <TextView
                style="@style/qNum"
                android:text="@string/questionNumber1"
                />
            <TextView
                style="@style/question"
                android:text="@string/question1"
                />

            <RadioGroup
                style="@style/checkbox_container"
                android:id="@+id/mRadioGroup1"
                >
                <RadioButton
                    style="@style/checkbox"
                    android:text="@string/question1_answer1"
                    />
                <RadioButton
                    style="@style/checkbox"
                    android:text="@string/question1_answer2"
                    />
                <RadioButton
                    style="@style/checkbox"
                    android:text="@string/question1_answer3"
                    android:id="@+id/answer1"
                    />
                <RadioButton
                    style="@style/checkbox"
                    android:text="@string/question1_answer4"
                    />
            </RadioGroup>
        </LinearLayout>
        <!--QUESTION 2-->
        <LinearLayout
            style="@style/q_container"
            >
            <TextView
                style="@style/qNum"
                android:text="@string/questionNumber2"
                />
            <TextView
                style="@style/question"
                android:text="@string/question2"
                />
            <RadioGroup
                style="@style/checkbox_container"
                android:id="@+id/mRadioGroup2"
                >
                <RadioButton
                    style="@style/checkbox"
                    android:text="@string/question2_answer1"
                    />
                <RadioButton
                    style="@style/checkbox"
                    android:text="@string/question2_answer2"
                    />
                <RadioButton
                    style="@style/checkbox"
                    android:text="@string/question2_answer3"
                    />
                <RadioButton
                    style="@style/checkbox"
                    android:text="@string/question2_answer14"
                    android:id="@+id/answer2"
                    />
            </RadioGroup>
        </LinearLayout>
        <!--QUESTION 3-->
        <LinearLayout
            style="@style/q_container"
            >
            <TextView
                style="@style/qNum"
                android:text="@string/questionNumber3"
                />
            <TextView
                style="@style/question"
                android:text="@string/question3"
                />
            <EditText
                style="@style/q_editText"
                android:id="@+id/mEditText1"
                />
        </LinearLayout>
        <!--QUESTION 4-->
        <LinearLayout
            style="@style/q_container"
            >
            <TextView
                style="@style/qNum"
                android:text="@string/questionNumber4"
                />
            <TextView
                style="@style/question"
                android:text="@string/question4"
                />
            <EditText
                style="@style/q_editText"
                android:id="@+id/mEditText2"
                />
        </LinearLayout>
        <!--QUESTION 5-->
        <LinearLayout
            style="@style/q_container"
            >
            <TextView
                style="@style/qNum"
                android:text="@string/questionNumber5"
                />
            <TextView
                style="@style/question"
                android:text="@string/question5"
                />
            <LinearLayout
                style="@style/checkbox_container"
                >
                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/question5_answer1"
                    android:id="@+id/mCheckboxQ5_answer1"
                    />
                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/question5_answer2"
                    android:id="@+id/mCheckboxQ5_answer2"
                    />
                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/question5_answer3"
                    android:id="@+id/mCheckboxQ5_answer3"
                    />
                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/question1_answer4"
                    android:id="@+id/mCheckboxQ5_answer4"
                    />
            </LinearLayout>
        </LinearLayout>
        <!--QUESTION 6-->
        <LinearLayout
            style="@style/q_container"
            >
            <TextView
                style="@style/qNum"
                android:text="@string/questionNumber6"
                />
            <TextView
                style="@style/question"
                android:text="@string/question6"
                />
            <LinearLayout
                style="@style/checkbox_container"
                android:layout_width="match_parent"
                >
                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/question6_answer1"
                    android:id="@+id/mCheckboxQ6_answer1"
                    />
                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/question6_answer2"
                    android:id="@+id/mCheckboxQ6_answer2"
                    />
                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/question6_answer3"
                    android:id="@+id/mCheckboxQ6_answer3"
                    />
                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/question6_answer4"
                    android:id="@+id/mCheckboxQ6_answer4"
                    />
            </LinearLayout>
        </LinearLayout>
        <!--SUBMIT-->

        <Button
            style="@style/submit"
            />
    </LinearLayout>
</ScrollView>